--- a/chipiron/todo
+++ b/chipiron/todo
@@ -4,3 +4,5 @@ league
 gnnn
 transformer
 more complex board value, not just one idmension
+make a large reformat so that the players are created after the launch of process 
+opening book
