--- a/chipiron/todo
+++ b/chipiron/todo
@@ -8,4 +8,5 @@ make a large reformat so that the players are created after the launch of proces
 opening book
 diminish th eamount of assert and make the type be compatible natively, a lot of None and alforithmic node test that might be removed with different architecture
 mypy script
+remove circular import that appears when removing forward reference with 'Class'
 
