--- a/chipiron/todo
+++ b/chipiron/todo
@@ -4,9 +4,12 @@ league
 gnnn
 transformer
 more complex board value, not just one idmension
-make a large reformat so that the players are created after the launch of process 
 opening book
+
+
+before first release
 diminish th eamount of assert and make the type be compatible natively, a lot of None and alforithmic node test that might be removed with different architecture
 mypy script
 remove circular import that appears when removing forward reference with 'Class'
+clean and dociment the scuprt/parsing system!!
 
